syntax = "proto3";

import "dev/restate/common/common.proto";

package dev.restate.cluster_controller;

service ClusterController {
  // Attach node at cluster controller
  rpc AttachNode(AttachmentRequest) returns (AttachmentResponse);
}

message AttachmentRequest {
  dev.restate.common.NodeId node_id = 1;
}

message AttachmentResponse {
}


