// Copyright (c) 2024 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

import "google/protobuf/empty.proto";
import "dev/restate/common/common.proto";

package dev.restate.worker;

service WorkerSvc {
  // Terminate the specified invocation
  rpc TerminateInvocation(TerminationRequest) returns (google.protobuf.Empty);

  // Mutate the specified state
  rpc MutateState(StateMutationRequest) returns (google.protobuf.Empty);

  // Queries the storage of the worker and returns the result as a stream of responses
  rpc QueryStorage(StorageQueryRequest) returns (stream StorageQueryResponse);

  // Updates the schema information on the worker node
  rpc UpdateSchemas(UpdateSchemaRequest) returns (google.protobuf.Empty);
}

message TerminationRequest {
  // todo: Replace with proper protobuf
  bytes invocation_termination = 1;
}

message StateMutationRequest {
  // todo: Replace with proper protobuf
  bytes state_mutation = 1;
}

message StorageQueryRequest {
  string query = 1;
}

message StorageQueryResponse {
  bytes header = 1;
  bytes data = 2;
}

message UpdateSchemaRequest {
  bytes schema_bin = 1;
}
